deploy/kubernetes/templates/21-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: __KUBERNETES_NAMESPACE__
  labels:
    app.kubernetes.io/name: gateway
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/component: api
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
